<resources>
    <string name="app_name">NoteRex</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="con_pass">Coniform Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="olduser"><u>Have an account?</u></string>
    <string name="login">Login</string>
    <string name="new_user"><u>New user?</u></string>
    <string name="google">Continue with Google</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="default_web_client_id">240492027432-2svp1vjfdt1bho4fnip52fs52gqjmkoi.apps.googleusercontent.com</string>
    <string name="or">or</string>
    <string name="welcome">Create an account</string>
    <string name="description"> Create an account so you can create unlimited notes</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="you_have_been_missed">you have been missed!</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
</resources>